information/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unitech-ingress
  namespace: unitech
spec:
  IngressClassName: nginx
  rules:
  - host: do.raliku.com  # Replace with your DNS name
    http:
      paths:
        - backend:
           service:
            name: unitech-console  # Replace with your MinIO tenant's service name
            port:
              number: 9090
          path: /
          pathType: Prefix
